--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,11 @@
     <title>Creating a Full-Stack Python Application with NPM, React.js and Webpack</title>
   </head>
   <body>
+    <div>{{message}}</div>
+    <br/>
+    <br/>
     <div id="content" />
+
     <script src="dist/bundle.js" type="text/javascript"></script>
   </body>
 </html>
